# clio-vqpu

./: .gitignore  CITATION.cff  CLAIMS_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_ASSESSMENT.md  PROJECT_CONTRACT.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
crates/clio-assembler/: Cargo.toml
crates/clio-assembler/src/: lib.rs
crates/clio-backend/: Cargo.toml
crates/clio-backend/src/: lib.rs
crates/clio-bench/: Cargo.toml
crates/clio-bench/src/: main.rs
crates/clio-cli/: Cargo.toml
crates/clio-cli/src/: main.rs
crates/clio-core/: Cargo.toml
crates/clio-core/src/: lib.rs
crates/clio-engine/: Cargo.toml
crates/clio-engine/src/: lib.rs
crates/clio-isa/: Cargo.toml
crates/clio-isa/src/: lib.rs
crates/clio-parser/: Cargo.toml
crates/clio-parser/src/: lib.rs
crates/clio-replay/: Cargo.toml
crates/clio-replay/src/: lib.rs  main.rs
crates/clio-resource/: Cargo.toml
crates/clio-resource/src/: lib.rs
crates/clio-runtime/: Cargo.toml
crates/clio-runtime/src/: lib.rs
crates/clio-sdk/: Cargo.toml
crates/clio-sdk/src/: lib.rs
crates/clio-studio/: Cargo.toml
crates/clio-studio/src/: main.rs
crates/clio-studio/web/: app.js  index.html  overrides.css  style.css
crates/clio-trace/: Cargo.toml
crates/clio-trace/src/: lib.rs
crates/clio-validation/: Cargo.toml
crates/clio-validation/src/: lib.rs
docs/concepts/: what-clio-is-not.md  what-clio-is.md
docs/reference/: isa-summary.md  release.md  sdk.md  security-model.md  studio.md
docs/tutorials/: bell-state.md  classical-isa.md  ghz-state.md  measurement-branching.md  oracle-algorithms.md  teleportation.md
examples/bell-state/: README.md  main.clio
examples/bernstein-vazirani/: README.md
examples/bernstein-vazirani/secret-00101/: main.clio
examples/bernstein-vazirani/secret-1011/: main.clio
examples/classical-conformance/: README.md  main.clio
examples/deutsch-jozsa/: README.md
examples/deutsch-jozsa/balanced-parity/: main.clio
examples/deutsch-jozsa/constant-one/: main.clio
examples/deutsch-jozsa/constant-zero/: main.clio
examples/ghz-state/: README.md
examples/ghz-state/3-qubits/: main.clio
examples/ghz-state/4-qubits/: main.clio
examples/ghz-state/5-qubits/: main.clio
examples/grover/: README.md
examples/grover/2-qubit/: main.clio
examples/grover/3-qubit/: main.clio
examples/measurement-branching/: README.md  main.clio
examples/qft/: README.md
examples/qft/3-qubit-roundtrip/: main.clio
examples/resource-limits/: README.md
examples/resource-limits/division-by-zero/: main.clio
examples/resource-limits/infinite-loop/: main.clio
examples/resource-limits/overflow/: main.clio
examples/teleportation/: README.md
examples/teleportation/one/: main.clio
examples/teleportation/plus/: main.clio
examples/teleportation/zero/: main.clio
packaging/scripts/: build-release.sh  generate_sbom.py
research/: evidence-checksums.json
research/benchmarks/: README.md
research/benchmarks/environment/: environment.json
research/benchmarks/final/environment/: environment.json
research/benchmarks/final/processed/: artifact-checksums.json  benchmark-summary.csv
research/benchmarks/final/raw/: benchmark-results.csv  benchmark-results.sha256
research/benchmarks/processed/: artifact-checksums.json  benchmark-summary.csv  resource-trace-results.csv
research/benchmarks/raw/: benchmark-results.csv  benchmark-results.sha256
research/benchmarks/scripts/: evidence_integrity.py  process_results.py  resource_trace_probe.py  sync_figure_manifest.py
research/diagrams/: benchmark-evidence-pipeline.mmd  differential-testing-pipeline.mmd  ghz-execution-flow.mmd  grover-amplitude-flow.mmd  measurement-collapse-flow.mmd  observation-pipeline.mmd  oracle-validation-flow.mmd  qft-roundtrip-flow.mmd  single-qubit-gate-indexing.mmd  state-vector-layout.mmd  teleportation-hybrid-flow.mmd
research/figures/: figure-manifest-template.csv  figure-manifest.csv
research/novelty/: related-work-template.md
research/paper/: PAPER_REQUIREMENTS.md
research/paper/chapters/: abstract-and-introduction.md  architecture-and-isa.md  correctness.md  discussion-limitations-conclusion.md  engine-and-runtime.md  experimental-results.md  external-baseline.md  methodology.md  replay-and-compatibility.md  resource-and-trace-evaluation.md  studio.md
research/paper/scripts/: build_paper.py
research/protocol/: research-plan.md
spec/architecture/: first-end-to-end-checklist.md  overview.md  processor-state.md  studio.md
spec/assembly/: grammar.md
spec/decisions/: 0000-template.md  0001-basis-order.md  0002-classical-semantics.md  0003-rng-and-replay.md  0004-qubit-lifecycle.md
spec/isa/: overview.md
