[package]
name = "clio-isa"
version = "0.0.0"
description = "Typed Clio ISA instructions, operands, and metadata."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clio-core = { path = "../clio-core" }
serde.workspace = true
