[package]
name = "clio-replay"
version = "0.0.0"
description = "Portable replay package creation and verification for Clio VQPU."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clio-isa = { path = "../clio-isa" }
clio-resource = { path = "../clio-resource" }
clio-runtime = { path = "../clio-runtime" }
clio-sdk = { path = "../clio-sdk" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
