[package]
name = "clio-trace"
version = "0.0.0"
description = "Bounded structured execution tracing and replay artifacts."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clio-core = { path = "../clio-core" }
serde.workspace = true
